add temp key validation for UI reqs, remove public endpoints
